  * Depend on HTML::Scrubber, since the scrubber is enabled by default and
    dies if its can't be loaded.
  * The search plugin needs to override <base> to point to the directory
    containing ikiwiki.cgi, but this should not change the urls to the style
    sheets etc. Add a new forcebareurl parameter to misctemplate to allow
    it to do that.

 -- Josh Triplett <josh@freedesktop.org>  Sun, 10 Feb 2008 13:18:58 -0800

ikiwiki (2.31.3) unstable; urgency=high

  [ Josh Triplett ]
  * Do not allow the about: URI scheme; some browsers interpret about:
    URIs like a limited version of data: URIs.  In particular, some
    versions of Internet Explorer interpret arbitrary HTML content in
    about: URIs.
  * Also filter the attributes cite, longdesc, and usemap, which can contain
    URIs.

  [ Joey Hess ]
  * meta: Check that the urls provided for authorurl, permalink, and openid
    are safe and can't contain javascript.

  [ Josh Triplett ]
  * Match literal '.' in URI schemas containing '.', rather than matching any
    character.
  * Do not allow the steam: URI scheme.
  * Allow the snews: URI scheme.
  * Allow the smb: URI scheme.

 -- Josh Triplett <josh@freedesktop.org>  Sun, 10 Feb 2008 14:48:48 -0800

ikiwiki (2.31.2) unstable; urgency=high

  * The security fix in the last release had buggy handling of data:image,
    now fixed.

 -- Joey Hess <joeyh@debian.org>  Sun, 10 Feb 2008 15:31:17 -0500

ikiwiki (2.31.1) unstable; urgency=low

  * htmlscrubber security fix: Block javascript in uris.
  * Add htmlscrubber test suite.
  * Thanks to Josh Triplett for pointing out the holes and for his help
    in implementing and checking fixes.

 -- Joey Hess <joeyh@debian.org>  Sun, 10 Feb 2008 13:22:59 -0500

ikiwiki (2.31) unstable; urgency=low

  [ Joey Hess ]
  * Revert preservation of input file modification times in output files,
    since this leads to too many problems with web caching, especially with